FIX: Spacing correction on the Featured Collections dash tile. Switched to only using black icons for the 'non photo' dash tiles as white text and icons are more readable/visible.

--- a/css/global.css
+++ b/css/global.css
@@ -941,7 +941,7 @@ a.HomePanel:active {color:transparent;}
 	position: relative;
 	padding-left: 60px;
 	padding-right: 15px;
-	padding-top: 18px;
+	padding-top: 12px;
 	margin-bottom: 0;
 }
 .HomePanelDynamicDash p, .HomePanelThemes p {
